--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,12 @@ html{
     background-image: linear-gradient(to bottom right, #9296b8 0%, #c0a1b1 50%, #eea85f 75%);
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    min-height: 100%;
+}
+
 .header{
     text-align: center;
 }
@@ -75,6 +81,7 @@ main p{
   font-size: 23px;
   margin-right: 20%;
   margin-left: 20%;
+  padding: 10px;
   /* text-align: center; */
 }
 
@@ -83,7 +90,7 @@ footer{
   color: #d9d9d9;
   background-color: #404040;
   display:block;
-  padding: 5px 0;
+  padding: 15px 0;
   text-align: center;
 }
 
@@ -95,7 +102,7 @@ footer a{
     display:grid;
     grid-template-columns: auto auto auto;
     grid-gap: 10px;
-    padding: 10px;
+    padding: 10px 10px;
 }
 
 .grid-container > div {
@@ -158,10 +165,10 @@ footer a{
 }
 
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-/* #main {
+#main {
   transition: margin-left .5s;
   padding: 20px;
-} */
+}
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
